--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "type": "module",
+  "bin": {
+    "gendiff": "bin/gendiff.js"
+  },
+  "type": "commonjs",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Rjkec/frontend-project-lvl2.git"
