--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "commander": "^9.3.0",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "eslint": "^8.21.0"
   }
 }
