--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "[![Actions Status](https://github.com/Rjkec/frontend-project-lvl2/workflows/hexlet-check/badge.svg)](https://github.com/Rjkec/frontend-project-lvl2/actions)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest"
   },
   "bin": {
     "gendiff": "bin/gendiff.js"
@@ -26,6 +26,7 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "eslint": "^8.21.0"
+    "eslint": "^8.21.0",
+    "jest": "^28.1.3"
   }
 }
